# fsresource-tree

./: README.md  publish.sh  pyproject.toml  upgrade.sh
docs/: TODO.md
fsresource_tree/: __init__.py  directory.py  exceptions.py  file.py  filesystem.py
fsresource_tree/core/: __init__.py  directory.py  file.py  resource.py  tree.py
fsresource_tree/operations/: __init__.py  ancestors.py  create.py  delete.py  exists.py  path.py  search.py  walker.py
fsresource_tree/renderers/: __init__.py  mermaid.py
fsresource_tree/serializers/: __init__.py  dict.py  json.py
tests/: test_basic.py
