[project]

name = "fsresource-tree"
version = "0.1.6"

description = "Filesystem resource tree implementation"

readme = "README.md"

requires-python = ">=3.11"


dependencies = [
    "resourcetree>=0.1.2"
]


[tool.setuptools.packages.find]

where = ["."]



[build-system]

requires = [
    "setuptools",
    "wheel"
]

build-backend = "setuptools.build_meta"